# cabane.io.FizzBuzz

./: .dockerignore  .env  .gitignore  echoer.dockerfile  fizzbuzz.code-workspace  fizzbuzz.dockerfile  frontend.dockerfile  launch.sh  query.sh  reducer.dockerfile
echoer/: client.js  index.js  package.json
fizz_and_buzz/: .packages  pubspec.yaml  readme.md
fizz_and_buzz/src/: server.dart
frontend/: README.md  mix.exs
frontend/assets/: package-lock.json
frontend/config/: config.exs  dev.exs  prod.exs  prod.secret.exs
frontend/lib/: cabane_io.ex
frontend/lib/cabane_io/: buzzer.pb.ex  echo.pb.ex  fizzer.pb.ex  reducer.pb.ex
frontend/lib/frontend_web/: endpoint.ex  router.ex
frontend/lib/frontend_web/channels/: user_socket.ex
frontend/lib/frontend_web/controllers/: fizzbuzz_controller.ex
frontend/lib/frontend_web/templates/layout/: app.html.eex
frontend/priv/static/js/: app.js
k8s/: Chart.yaml  all.yaml  tiller.yaml  values.yaml
k8s/istio/: gateway.yaml  routing.yaml
k8s/templates/: buzz.yaml  echo.yaml  fizzer.yaml  frontend.yaml  reducer.yaml
protobuf/: buzzer.proto  echo.proto  fizzer.proto  reducer.proto
reducer/: .envrc  pyproject.toml  readme.md
reducer/cabane_io/: buzzer_grpc.py  buzzer_pb2.py  echo_grpc.py  echo_pb2.py  fizzer_grpc.py  fizzer_pb2.py  reducer_grpc.py  reducer_pb2.py
reducer/fizzbuzz_reducer/: server.py
